# SecureFlow-scaffold

./: .gitignore  Cargo.toml  README.md  deploy.sh  environments.toml  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
backend/: package-lock.json  package.json
backend/src/: index.ts
backend/src/routes/: messages.ts  (+1 more)
contracts/: Cargo.toml
contracts/secureflow/src/: admin.rs  lib.rs  refund_system.rs  storage_types.rs
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: eoa-balance.tsx  milestone-actions.tsx  milestone-approval-panel.tsx  navbar.tsx  wallet-button.tsx
frontend/contexts/: smart-account-context.tsx  web3-context.tsx
frontend/hooks/: use-admin-status.ts  use-appkit-sync.ts
src/: App.tsx
src/components/: milestone-actions.tsx  milestone-approval-panel.tsx  navbar.tsx  new-message-watcher.tsx  notification-center.tsx
src/contexts/: delegation-context.tsx  notification-context.tsx  web3-context-refactored.tsx  web3-context.tsx
src/hooks/: use-admin-status.ts  use-escrow-actions.ts  use-freelancer-status.ts  use-job-creator-status.ts  use-pending-approvals.ts  use-wallet-refactored.ts  useSubscription.ts  useWalletBalance.ts
src/lib/: api.ts  utils.ts
src/pages/: AdminPage.tsx  ApprovalsPage.tsx  CreatePage.tsx  DashboardPage.tsx  DisputesPage.tsx  FreelancerPage.tsx  FreelancersPage.tsx  HomePage.tsx  JobsPage.tsx  MessagesPage.tsx
src/providers/: WalletProvider.tsx
supabase/migrations/: 20260427000000_storage_bucket.sql  20260428000000_messages.sql  (+2 more)
(+38 files in other folders)
